# jira-ticket-tracker

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.MD  README.md  ticket-ticker.1  ticket-tracker.1
.github/: RELEASE_TEMPLATE.md
.github/workflows/: release.yml  test.yml
.rpm/: ticket-tracker.spec
releases/: README.md
src/: lib.rs  main.rs
src/app/: mod.rs  ticket_tracker.rs
src/config/: settings.rs
src/platform/: linux.rs  macos.rs  mod.rs  process.rs  windows.rs
src/ui/: components.rs  window.rs
src/utils/: excel.rs  helpers.rs  mod.rs
