[package]
name = "ticket-ticker"
version = "0.1.0"
edition = "2021"
authors = ["Marcus Weissohn Eede <marcus.weissohn@gmail.com>"]
description = "A desktop application for easy JIRA ticket tracking with visual feedback"
license = "MIT"
readme = "README.md"

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
chrono = "0.4.31"
directories = "5.0.1"
csv = "1.2.2"
image = "0.24.7"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rust_xlsxwriter = "0.42"
regex = "1.10"
calamine = "0.22.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["mmsystem"] }

[package.metadata.deb]
assets = [
    ["target/release/ticket-ticker", "usr/bin/", "755"],
    ["ticket-ticker.1", "usr/share/man/man1/", "644"],
]
maintainer = "Marcus Weissohn Eede <marcus.weissohn@gmail.com>"
copyright = "2024, Marcus Weissohn Eede <marcus.weissohn@gmail.com>"
depends = "$auto"
section = "utility"
priority = "optional"
extended-description = """
A desktop application that helps track JIRA tickets.
Features include:
 * Visual feedback with reactive faces
 * Excel export
 * Sound feedback
 * Autostart capability
"""

[package.metadata.rpm]
package = "ticket-ticker"
release = "1"
license = "MIT"
group = "Applications/Productivity"